# OrchidBot

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  SETUP_GUIDE.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements-rpi.txt  requirements.txt
.github/workflows/: ci.yml
config/: default.yaml
data/security_reports/: security_audit_20250909_022146.json  security_audit_20250909_022312.json
docs/: CI_TROUBLESHOOTING.md  README.md
docs/ai_agents/: AGENT_GUIDE.md
scripts/: get_version.py  security_audit.py  test_docker_container.py  validate_config.py
scripts/calibration/: verify_wiring.py
src/: __init__.py
src/core/: __init__.py  controller.py  safety.py
src/hardware/: __init__.py  gpio_manager.py
src/sensors/: __init__.py  moisture.py  overflow.py
tests/integration/: test_system_integration.py
tests/stability/: test_suite.py
tests/unit/: test_controller.py
